Nav bar of all html pages modified by adding links to all pages and hide login button in all aproduct pages and admin pages

--- a/adminhome.html
+++ b/adminhome.html
@@ -29,22 +29,22 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item ">
-                          <a class="nav-link" href="adminhome.html" id="home">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="adminhome.html"  id="home">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link " href="phones.html" id="mobiles" >Products</a>
+                          <a class="nav-link " href="#l" id="mobiles" >Products</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="chromebook.html" id="chromebooks">Registered Users</a>
+                          <a class="nav-link" href="#" id="chromebooks">Registered Users</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="ghome.html" id="connectedhome" >Stock</a>
+                          <a class="nav-link" href="#" id="connectedhome" >Stock</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="https://store.google.com/product/google_nest_hub"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
+                           <a class="nav-link" style="display:none;" href="https://store.google.com/product/google_nest_hub"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="signin.html"><i class="fa fa-user" aria-hidden="true"></i></a> 
+                            <a class="nav-link" style="display:none;" href="signin.html"><i class="fa fa-user" aria-hidden="true"></i></a> 
                            </li>
                       </ul>
                     </div>
