--- a/chromebook.html
+++ b/chromebook.html
@@ -33,19 +33,19 @@
                           <a class="nav-link" href="index.html" id="home">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="mobiles" >Mobiles</a>
+                          <a class="nav-link" href="phones.html" id="mobiles" >Mobiles</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="chromebooks">Chromebooks</a>
+                          <a class="nav-link" href="chromebook.html" id="chromebooks">Chromebooks</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="connectedhome" >Connected Home</a>
+                          <a class="nav-link" href="ghome.html" id="connectedhome" >Connected Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="https://store.google.com/product/google_nest_hub"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
+                           <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="signin.html"><i class="fa fa-user" aria-hidden="true"></i></a> 
+                            <a class="nav-link" href="#"><i class="fa fa-user" style="display:none;" aria-hidden="true"></i></a> 
                            </li>
                       </ul>
                     </div>
@@ -128,5 +128,12 @@
         </div>
     </footer>
   
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/51ffffd858.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 </body>
 </html>
