--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="header-imagesection">
                     <a href="index.html"><img class="header-image" src="images/googlelogo.png" alt=""></a>
                 </div>
@@ -42,7 +42,7 @@
                           <a class="nav-link" href="ghome.html" id="connectedhome" >Connected Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="https://store.google.com/product/google_nest_hub"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
+                           <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="signin.html"><i class="fa fa-user" aria-hidden="true"></i></a> 
