--- a/landingpage.html
+++ b/landingpage.html
@@ -33,19 +33,19 @@
                           <a class="nav-link" href="#" id="home">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="mobiles" >Mobiles</a>
+                          <a class="nav-link" href="phones.html" id="mobiles" >Mobiles</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="chromebooks">Chromebooks</a>
+                          <a class="nav-link" href="chromebook.html" id="chromebooks">Chromebooks</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#" id="connectedhome" >Connected Home</a>
+                          <a class="nav-link" href="ghome.html" id="connectedhome" >Connected Home</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="https://store.google.com/product/google_nest_hub"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
+                           <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" aria-hidden="false"></i></a> 
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="signin.html"><i class="fa fa-user" aria-hidden="true"></i></a> 
+                            <a class="nav-link" href="#"><i class="fa fa-user" style="display:none;" aria-hidden="true"></i></a> 
                            </li>
                       </ul>
                     </div>
